[package]
name = "syn-debugger-web"
version = "0.1.2"
edition = "2021"
description = "A syntax debugger for procedural macro developers, powered by Syn and Yew."
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo-timers = "0.2.6"
proc-macro2 = "1.0.65"
syn = "2.0.26"
web-sys = "0.3.64"
yew = { version = "0.20", features = ["csr"] }
